# zero2prod

./: .gitignore  Cargo.toml  Dockerfile  README.md  configuration.yaml  recipe1.json
.github/workflows/: docker-image.yml  rust.yml
configuration/: base.yaml  production.yaml
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
