[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dependencies]
actix-web = "4.9.0"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
config = "0.14.0"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.10.0", features = ["v4"] }

[dev-dependencies]
reqwest = "0.12.7"

[lib]
path = "src/lib.rs"

[[bin]]
name = "zero2prod"
