[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dependencies]
actix-web = "4.9.0"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
claims = "0.7.1"
config = "0.14.0"
fake = "2.10.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-actix-web = "0.7.12"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter", "fmt", "std"] }
unicode-segmentation = "1.12.0"
uuid = { version = "1.10.0", features = ["v4"] }
validator = "0.18.1"

[dev-dependencies]
reqwest = "0.12.7"

[lib]
path = "src/lib.rs"

[[bin]]
name = "zero2prod"
